name: advent
version: 1.0
cabal-version: 1.22
build-type: Simple

Executable Main
  main-is: Main.hs
  hs-source-dirs: src
  default-language: Haskell2010
  default-extensions: NoImplicitPrelude
  other-modules: Day01
               , Day02
               , Day03
               , Day04
               , Day05
               , Day06
               , Day07
               , Day08
               , Day09
               , Day10
               , Day11
               , Day12
               , Day13
               , Day14
               , Day15
               , Day16
               , Day17
               , Day18
               , Day19
               , Day20
               , Day21
               , Day22
               , Day23
               , Day24
               , Day25
  build-depends:
      base,
      aeson,
      megaparsec,
      time,
      extra,
      regex-tdfa,
      raw-strings-qq,
      text-show,
      universum,
      composition,
      cond,
      containers,
      data-foldapp,
      edit-distance,
      extra,
      generic-lens,
      keys,
      lens,
      matrices,
      megaparsec,
      parsec,
      parsec-numbers,
      parser-combinators,
      profunctors,
      recursion-schemes,
      split,
      search-algorithms,
      text,
      universum,
      vector,
      semigroupoids,
      data-dword,
      list-predicate,
      primes,
      arithmoi
  ghc-options: -O2 -fno-warn-missing-signatures
